--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -3,35 +3,56 @@
 
 body {
     background-color: black;
-	margin-top: 100px;
+	margin-top: 200px;
 }
 a {
     color:ghostwhite;
 	text-decoration: none;
+	font-size: 18px;
 }
 
 .box{
     display: none;
-    width: 100%;
+    padding: 0;
+    overflow: hidden;
+	height: 100%;
+	width: 100%; 
+	object-fit: contain;
 }
 
+.frame {
+    border: 0;
+    /*-ms-transform: scale(0.25);
+    -moz-transform: scale(0.25);
+    -o-transform: scale(0.25);
+    -webkit-transform: scale(0.25);
+    transform: scale(0.25);
+
+    -ms-transform-origin: 0 0;
+    -moz-transform-origin: 0 0;
+    -o-transform-origin: 0 0;
+    -webkit-transform-origin: 0 0;
+    transform-origin: 0 0;*/
+}
 a:hover + .box,.box:hover{
     display: block;
-    position: relative;
+    position: absolute;
+	left: 600px;
+    top: 450px;
     z-index: 100;
 }
+
+a:hover{
+	color: aqua;
+}
+
+iframe{
+    max-width: 100%;
+    max-height: 100%;
+}
+
 h1,h2,h3 {
 			text-align: center;
-			color:ghostwhite;
-			font-family: "Times New Roman";
-			font-size: 14px;
 }
-			
-/*h2{
-    color:black;
-    font-family: "Helvetica Neue";
-    font-size: 20px;
-	text-align: center;
-}*/
 
 #heading {text-align: center;}
