--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,6 +1,9 @@
 @charset "UTF-8";
 /* CSS Document */
-
+a{
+	text-decoration: none;
+	color:ghostwhite;
+}
 body {
 	height: 800px;
     background-color: black;
